removed the radius from the Hero section in the home page, as i also removed the background color of the about section to suits the page, and the fixed the alignment of the boxes under the hero section

--- a/frontend/src/components/FlipCard.css
+++ b/frontend/src/components/FlipCard.css
@@ -2,16 +2,10 @@
     perspective: 1000px;
     width: 400px;
     height: 150px;
+    transform: translateY(50px);
     cursor: pointer;
 }
 
-.flip-card-container.appointments {
-    transform: translateY(100px);
-}
-
-.flip-card-container.requests {
-    transform: translateY(100px);
-}
 
 .flip-card {
     position: relative;
