--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -2,15 +2,12 @@
  background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
-border-radius: 20px;
 overflow: hidden;
 height: 500px;
 width: 100%;
-max-width: 1500px;
 aspect-ratio: 16 / 9;
 padding: 0;
-margin: 0 auto;
-margin-top: 20px;
+margin-top: 10px;
 color: white;
 display: flex;
 flex-direction: column;
