--- a/frontend/src/partials/HPSections.css
+++ b/frontend/src/partials/HPSections.css
@@ -12,6 +12,8 @@
 
 .Box.about {
     margin-top: 120px;
+    background-color: #fff;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0);
     margin-left: 2%;
     margin-right: 2%;
     width: auto;
@@ -21,9 +23,9 @@
 
 .Box h3 {
     margin-bottom: 12px;
-    font-size: 18px;
-    font-weight: bold;
-    color: #000;
+    font-size: 30px;
+    font-weight: extra-bold;
+    color: #992e49;
 }
 
 .Box p {
